Home > Fixed bug wherein person summaries, being too narrow, highlighted awkwardly.

--- a/mysite/static/css/profile/search_people.css
+++ b/mysite/static/css/profile/search_people.css
@@ -22,7 +22,7 @@ body#people-map .profile-link{border:2px solid #fff; float:right; margin-left:4p
 #people-list li.highlighted .name{text-shadow:0 1px 0 #fff; }
 #people-list .people-list-column{width:32%; float:left; border-left:1px dashed #CCC; padding-left:15px; }
 #people-list .people-list-column:first-child{border-left:none; padding-left:0; }
-#people-list li{border-radius:8px; -moz-border-radius:8px; margin-bottom:3px; list-style:none; display:block; float:left; width:251px; padding:8px; }
+#people-list li{border-radius:8px; -moz-border-radius:8px; margin-bottom:3px; list-style:none; display:block; float:left; width:94%; padding:8px; }
 #people-list li img{font-size:51px; vertical-align:top; float:left; margin-right:10px; margin-bottom:5px; }
 #people-list li .name{display:block; font-size:1.1em; margin-bottom:2px; font-weight:700; }
 #people-list li .people-view-tags{display:block; font-size:.9em; color:#666; }
@@ -34,3 +34,5 @@ body#people-map .profile-link{border:2px solid #fff; float:right; margin-left:4p
 #people-list.people-list-map{list-style:square; overflow:auto; height:428px; width:33%; }
 #people-list.people-list-map li{cursor:hand; cursor: pointer; }
 body#people-map #map-zoom,.view-links ul{margin:0; padding:0; }
+
+body#people-map #people-list li { width: 90%; }
